# shopping-list

./: AGENTS.md  README.md  pyproject.toml  sample_recipe.md
.ai-dotfiles/gemini/.gemini/: GEMINI.md
.ai-dotfiles/gemini/.gemini/antigravity-cli/: mcp_config.json  settings.json  skills
.ai-dotfiles/opencode/: opencode.json
.ai-dotfiles/opencode/agents/: review.md
.ai-dotfiles/opencode/commands/: create-file.md
.devcontainer/: Dockerfile  devcontainer.json  post_setup.sh
.skills/caveman/: SKILL.md
docs/superpowers/plans/: 2026-06-07-shopping-list-api-implementation.md
docs/superpowers/specs/: 2026-06-07-shopping-list-api-design.md
